syntax = "proto3";

option java_outer_classname = "MdStockSnapshotTempletBO_PRO";
option java_package = "com.purefun.fams.md.pro";

message MdStockSnapshotTempletBO {
     string uuid = 1;
     sint64 boid = 2;
    string security_code = 4;
    string exch = 5;
    sint64 dateTime = 6;
    double open = 7;
    double preClose = 8;
    double lastPrice = 9;
    double high = 10;
    double low = 11;
    double buy1Price = 12;
    sint64 buy1Qty = 13;
    double buy2Price = 14;
    sint64 buy2Qty = 15;
    double buy3Price = 16;
    sint64 buy3Qty = 17;
    double buy4Price = 18;
    sint64 buy4Qty = 19;
    double buy5Price = 20;
    sint64 buy5Qty = 21;
    double sell1Price = 22;
    sint64 sell1Qty = 23;
    double sell2Price = 24;
    sint64 sell2Qty = 25;
    double sell3Price = 26;
    sint64 sell3Qty = 27;
    double sell4Price = 28;
    sint64 sell4Qty = 29;
    double sell5Price = 30;
    sint64 sell5Qty = 31;
    sint64 totalVolume = 32;
    double totalAmont = 33;
}
